assets/styles/modules/feed.less
@import './../variables.less';

/* ==========================================================================
   News styles
   ========================================================================== */
body.feed {
  .tile {
    background-color: #e5e5e5;
    box-shadow: -1px 1px 5px 1px #8c8c8c;
    margin-bottom: 30px;
    transition: ease-out 0.15s;
    .main {
      cursor: pointer;
      .headline {
        font-size: 22px;
        padding: 8px;
        display: inline-block;
        color: #000;
        text-decoration: none;
      }
      .thumbnail {
        padding: 0;
        margin-bottom: 0;
        border: none;
        overflow: hidden;
        width: 100%;
        border-radius: 0;
      }
    }

    .influencer {
      padding: 1px 8px;
      font-family: "Courier New";
      p.bold {
        margin: 0 0 1px;
        font-size: 17px;
      }
      a {
        font-style: italic;
        font-size: 15px;
      }
      p {
        font-size: 12px;
        letter-spacing: 0;
      }
      .thumbnail {
        float: left;
        margin-right: 8px;
      }
    }

    .footer {
      text-align: right;
      font-size: 10px;
      font-style: italic;
      padding: 2px 12px;
    }

    &:hover {
      transition: ease-out 0.15s;
      box-shadow: -1px 1px 22px 2px #8c8c8c;
    }
  }

  .tile.adv {
    text-align: center;
    background-color: #5e5e5e;
    color: #fff;
    h2 {
      padding: 40px 0;
    }
  }

  .btn-more {
    color: @primary-color;
    border: 2px solid black;
    border-radius: 0;
    padding: 11px 16px;
    font-size: 16px;
    width: 100%;
    margin: 54px 0;
  }
}

body.feed-my .connect {
  text-align: center;
  p {
    font-family: "Courier New";
    font-size: 17px;
  }

  .twitter {
    margin: 20px;
  }
}

